fixed about me image stretching

--- a/themes/adritian-free-hugo-theme/assets/css/main.css
+++ b/themes/adritian-free-hugo-theme/assets/css/main.css
@@ -1017,11 +1017,13 @@ pre code {
     -webkit-box-flex: 0;
     flex: 0 0 100%;
     max-width: 100%;
+    height:auto;
 }
 .col-13 {
     -webkit-box-flex: 0;
     flex: 0 0 100%;
     max-width: 100%;
+    margin-bottom: 50px;
     text-align: center;
 }
 .order-first {
@@ -9767,14 +9769,20 @@ input[type="email"]::placeholder {
     margin-right: -40px;
     margin-top: 20px;
 }
+
 .about__profile-picture img {
     min-width: 200px;
     min-height: 200px;
+    max-width: 100%;
+    height: auto; /* Maintain aspect ratio */
+    object-fit: cover; /* Ensures no stretching occurs */
 }
+
 html,
 html body {
     min-height: 100%;
 }
+
 @media (min-width: 768px) {
     .about__profile-picture {
         -webkit-box-flex: 0;
@@ -9782,7 +9790,6 @@ html body {
         width: 50%;
         margin-left: 0;
         margin-right: 0;
-
     }
 }
 .experience__title {
